--- a/.github/workflows/vuebuild.yml
+++ b/.github/workflows/vuebuild.yml
@@ -9,19 +9,19 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@main
-      
-    - name: Download
-      run: npm i vue-discord-message@5.0.2 vuepress@1.8.2 vuepress-theme-hope@latest @mr-hope/vuepress-plugin-copy-code@1.19.1 @mr-hope/vuepress-plugin-feed@1.19.1 @mr-hope/vuepress-plugin-reading-time@1.19.1
+      - name: Checkout
+        uses: actions/checkout@main
 
-    - name: Build
-      run: npm run build
+      - name: Download
+        run: npm i vue@2.6.12 vue-discord-message@5.0.2 vuepress@1.8.2 vuepress-theme-hope@latest @mr-hope/vuepress-plugin-copy-code@1.19.1 @mr-hope/vuepress-plugin-feed@1.19.1 @mr-hope/vuepress-plugin-reading-time@1.19.1
 
-    - name: Deploy
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.ACCESS_TOKEN }}
-        publish_dir: ./guide/.vuepress/dist
-        publish_branch: master
-        destination_dir: ./guide/
+      - name: Build
+        run: npm run build
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.ACCESS_TOKEN }}
+          publish_dir: ./guide/.vuepress/dist
+          publish_branch: master
+          destination_dir: ./guide/
